fix(ci): Fix GitHub Actions workflow failures
- Add missing requirements-test.txt with pytest and coverage dependencies
- Fix Docker file paths in aurora-main-ci.yml (Dockerfile.backend and Dockerfile.frontend are in root, not docker/ subdirectory)
- Fix all three Docker build references to use correct paths

This resolves CI/CD pipeline failures related to:
1. Missing test dependencies file
2. Incorrect Docker build paths causing build failures

--- a/.github/workflows/aurora-main-ci.yml
+++ b/.github/workflows/aurora-main-ci.yml
@@ -107,8 +107,8 @@ jobs:
 
       - name: Build Docker images
         run: |
-          docker build -f docker/Dockerfile.backend -t aurora-backend:test . || echo "⚠️ Backend build needs attention"
-          docker build -f docker/Dockerfile.frontend -t aurora-frontend:test . || echo "⚠️ Frontend build needs attention"
+          docker build -f Dockerfile.backend -t aurora-backend:test . || echo "⚠️ Backend build needs attention"
+          docker build -f Dockerfile.frontend -t aurora-frontend:test . || echo "⚠️ Frontend build needs attention"
 
       - name: Run Aurora quality gates
         continue-on-error: true
@@ -182,7 +182,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: docker/Dockerfile.backend
+          file: Dockerfile.backend
           platforms: linux/amd64,linux/arm64
           push: false
           tags: aurora-backend:latest
@@ -191,7 +191,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
-          file: docker/Dockerfile.frontend
+          file: Dockerfile.frontend
           platforms: linux/amd64,linux/arm64
           push: false
           tags: aurora-frontend:latest
