--- a/.github/workflows/deep-scan.yml
+++ b/.github/workflows/deep-scan.yml
@@ -65,26 +65,46 @@ jobs:
         continue-on-error: true
 
       - name: Install Client Dependencies
-        working-directory: ./client
         run: |
-          npm ci --legacy-peer-deps || npm install --legacy-peer-deps
+          if [ -d "./client" ]; then
+            cd client
+            npm ci --legacy-peer-deps || npm install --legacy-peer-deps
+          else
+            echo "No client directory, using root npm"
+            npm ci --legacy-peer-deps || npm install --legacy-peer-deps
+          fi
+        continue-on-error: true
 
       - name: Client Lint & Type Check
-        working-directory: ./client
         run: |
-          npx eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 100 --format unix || echo "ESLint completed with warnings"
-          npx tsc --noEmit --skipLibCheck || echo "TypeScript check completed with errors"
+          if [ -d "./client" ]; then
+            cd client
+            npx eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 100 --format unix || echo "ESLint completed with warnings"
+            npx tsc --noEmit --skipLibCheck || echo "TypeScript check completed with errors"
+          else
+            echo "No separate client directory - frontend is in root"
+            npm run build || echo "Build completed with warnings"
+          fi
         continue-on-error: true
 
       - name: Install Server Dependencies
-        working-directory: ./server
         run: |
-          npm ci --legacy-peer-deps || npm install --legacy-peer-deps
+          if [ -d "./server" ]; then
+            cd server
+            npm ci --legacy-peer-deps || npm install --legacy-peer-deps
+          else
+            echo "No separate server directory - backend is in root"
+          fi
+        continue-on-error: true
 
       - name: Server Lint
-        working-directory: ./server
         run: |
-          npx eslint . --ext .js,.ts --max-warnings 100 --format unix || echo "Server lint completed with warnings"
+          if [ -d "./server" ]; then
+            cd server
+            npx eslint . --ext .js,.ts --max-warnings 100 --format unix || echo "Server lint completed with warnings"
+          else
+            echo "No separate server directory"
+          fi
         continue-on-error: true
 
       - name: Dockerfile Linting
