--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -2,28 +2,30 @@
 # Install with: pip install -r requirements-test.txt
 
 # Testing Framework
-pytest==7.4.3
-pytest-cov==4.1.0
-pytest-asyncio==0.21.1
-pytest-mock==3.12.0
-pytest-xdist==3.5.0
+pytest>=8.3.5
+pytest-cov>=4.1.0
+pytest-asyncio>=0.23.0
+pytest-mock>=3.12.0
+pytest-xdist>=3.5.0
+pytest-timeout>=2.2.0
+pytest-html>=4.1.1
 
 # Test Coverage
-coverage==7.4.0
+coverage>=7.4.0
 
 # Mocking and Fixtures
-faker==22.0.0
-factory-boy==3.3.0
-responses==0.24.1
+faker>=22.0.0
+factory-boy>=3.3.0
+responses>=0.24.1
 
 # HTTP Testing
-httpx==0.25.2
+httpx>=0.28.1
 
 # Database Testing
-pytest-postgresql==5.0.0
+pytest-postgresql>=5.0.0
 
-# Async Testing
-asynctest==0.13.0
+# Async Testing (Python 3.11+ compatible)
+# asynctest is for Python <3.8, not needed for 3.11+
 
 # Test Utilities
-freezegun==1.4.0
+freezegun>=1.4.0
