--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -40,9 +40,17 @@ FROM node:20-alpine
 # Install curl for health checks
 RUN apk add --no-cache curl
 
-# Create non-root user
-RUN addgroup -g 1000 aurora && \
-    adduser -D -u 1000 -G aurora aurora && \
+# Create non-root user (robust: handles pre-existing UID/GID 1000)
+RUN if ! awk -F: '($3==1000){exit 0} END{exit 1}' /etc/group; then \
+        addgroup -g 1000 aurora; \
+    else \
+        addgroup aurora || true; \
+    fi && \
+    if ! awk -F: '($3==1000){exit 0} END{exit 1}' /etc/passwd; then \
+        adduser -D -u 1000 -G aurora aurora; \
+    else \
+        adduser -D -G aurora aurora || true; \
+    fi && \
     mkdir -p /app && \
     chown -R aurora:aurora /app
 
