fix: update .dockerignore to exclude all markdown files except specific ones and adjust Dockerfile to copy markdown files correctly

--- a/.dockerignore
+++ b/.dockerignore
@@ -61,10 +61,11 @@ tests/runs/
 .gitignore
 .gitattributes
 
-# Documentation
-*.md
+# Documentation (exclude docs but keep root README.md for builds)
 docs/
-README*
+!README.md
+!pyproject.toml
+!setup.py
 
 # Configuration (keep examples, exclude actual)
 .env
