--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,15 +4,44 @@
     "python.analysis.extraPaths": [
         "./tools"
     ],
+    "python.analysis.exclude": [
+        "**/tools/luminar_nexus.py",
+        "**/.venv/**",
+        "**/node_modules/**",
+        "**/__pycache__/**",
+        "**/dist/**",
+        "**/build/**"
+    ],
     "python.analysis.diagnosticSeverityOverrides": {
         "reportGeneralTypeIssues": "none",
         "reportUnusedVariable": "none",
         "reportUnusedImport": "warning",
         "reportMissingImports": "none",
         "reportOptionalMemberAccess": "none",
-        "reportShadowedImports": "none"
+        "reportShadowedImports": "none",
+        "reportUnusedFunction": "none",
+        "reportUnusedClass": "none"
     },
+    "python.analysis.indexing": true,
+    "python.analysis.memory.keepLibraryAst": false,
+    "python.languageServer": "Pylance",
     "python.defaultInterpreterPath": "./.venv/bin/python",
+    "files.watcherExclude": {
+        "**/.venv/**": true,
+        "**/node_modules/**": true,
+        "**/__pycache__/**": true,
+        "**/.pytest_cache/**": true,
+        "**/*.pyc": true,
+        "**/dist/**": true,
+        "**/build/**": true
+    },
+    "search.exclude": {
+        "**/.venv": true,
+        "**/node_modules": true,
+        "**/__pycache__": true,
+        "**/dist": true,
+        "**/build": true
+    },
     "css.lint.unknownAtRules": "ignore",
     "css.lint.vendorPrefix": "warning",
     "remote.autoForwardPorts": true,
