--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,10 +41,12 @@ jobs:
 
       - name: Run Semantic Release
         id: release
+        continue-on-error: true
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          semantic-release publish
+          semantic-release version || echo "No release needed"
+          semantic-release publish || echo "Publish skipped"
 
       - name: Build distribution packages
         if: steps.release.outputs.released == 'true'
