--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -4,7 +4,7 @@
 # ============================================
 # Stage 1: Build React Application
 # ============================================
-FROM node:20-alpine as builder
+FROM node:20-alpine AS builder
 
 WORKDIR /app
 
