chore: disable auto-linting workflow to prevent sync conflicts

--- a/.github/workflows/ci-autofix.yml
+++ b/.github/workflows/ci-autofix.yml
@@ -1,9 +1,11 @@
-name: Python Lint & Auto-Fix / Lint + Fix Python
+name: Python Lint & Auto-Fix / Lint + Fix Python (DISABLED)
 
+# DISABLED: Auto-linting was causing sync conflicts with local changes
 on:
-  push:
-    branches: [main, dev]
-  pull_request:
+  workflow_dispatch:  # Only runs manually, never automatically
+  # push:
+  #   branches: [main, dev]
+  # pull_request:
 
 permissions:
   contents: write
