refactor: Improve code formatting and readability in multiple files

--- a/.github/workflows/ci-autofix.yml
+++ b/.github/workflows/ci-autofix.yml
@@ -2,7 +2,7 @@ name: Python Lint & Auto-Fix / Lint + Fix Python (DISABLED)
 
 # DISABLED: Auto-linting was causing sync conflicts with local changes
 on:
-  workflow_dispatch:  # Only runs manually, never automatically
+  workflow_dispatch: # Only runs manually, never automatically
   # push:
   #   branches: [main, dev]
   # pull_request:
@@ -20,7 +20,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: "3.11"
       - name: Install tools
         run: pip install ruff black
       - name: Auto-fix
