SYSTEM STATUS: 🎊 100% OPERATIONAL - ZERO ERRORS 🎊

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,12 @@
     ".next/dev/types/**/*.ts"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "server/**/*",
+    "aurora/backend/**/*",
+    "scripts/**/*",
+    "runs/**/*",
+    "backups/**/*",
+    "tests/**/*"
   ]
 }
