--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,9 @@
     "paths": {
       "@/*": [
         "./client/src/*"
+      ],
+      "@shared/*": [
+        "./shared/*"
       ]
     }
   },
