--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "x-start": "concurrently -k -n BACKEND,NEXUS3,NEXUS2,AICORE -c \"yellow,cyan,magenta,green\" \"npm:dev\" \"python3 aurora_nexus_v3/main.py\" \"python3 tools/luminar_nexus_v2.py serve\" \"python3 tools/aurora_core.py\"",
-    "x-stop": "node tools/x-stop.js",
+    "x-start": "node tools/aurora_launcher.js start",
+    "x-stop": "node tools/aurora_launcher.js stop",
+    "x-status": "node tools/aurora_launcher.js status",
+    "x-install": "bash tools/universal_installer.sh",
+    "x-health": "node tools/health_check.js",
+    "backend": "tsx server/index.ts",
+    "frontend": "vite",
     "dev": "tsx server/index.ts",
     "build": "vite build",
     "preview": "vite preview",
