Enhance service management in aurora_launcher.js and add terminal profile settings in settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,5 +95,16 @@
             "elevateIfNeeded": false,
             "requireLocalPort": false
         }
+    },
+    "terminal.integrated.defaultProfile.windows": "PowerShell",
+    "terminal.integrated.profiles.windows": {
+        "PowerShell": {
+            "path": "C:\\\\Windows\\\\System32\\\\WindowsPowerShell\\\\v1.0\\\\powershell.exe",
+            "args": []
+        },
+        "Command Prompt": {
+            "path": "C:\\\\Windows\\\\System32\\\\cmd.exe",
+            "args": []
+        }
     }
 }
