--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -19,6 +19,16 @@
       "role": "aurora",
       "content": "I understand you have a general conversation request. Processing...",
       "timestamp": "2025-12-05T15:17:50.515709"
+    },
+    {
+      "role": "user",
+      "content": "status",
+      "timestamp": "2025-12-17T07:24:36.031567"
+    },
+    {
+      "role": "user",
+      "content": "self diagnose",
+      "timestamp": "2025-12-17T07:24:41.438617"
     }
   ],
   "mid_term": [],
@@ -47,9 +57,56 @@
     "last_intent": {
       "value": "general_conversation",
       "stored_at": "2025-12-05T15:17:50.516955"
+    },
+    "memory_6c86f881-0e8c-4707-8106-deef5350b09f": {
+      "value": {
+        "text": "status",
+        "meta": {
+          "session_id": "chat-1765956266868",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-17T07:24:36.035231",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-17T07:24:36.035238"
+    },
+    "memory_4a14beb5-6f8b-4312-b170-361a37512830": {
+      "value": {
+        "text": "self diagnose",
+        "meta": {
+          "session_id": "chat-1765956266868",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-17T07:24:41.441039",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-17T07:24:41.441048"
     }
   },
-  "events": [],
+  "events": [
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "6c86f881-0e8c-4707-8106-deef5350b09f",
+        "text_length": 6,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-17T07:24:36.035789"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "4a14beb5-6f8b-4312-b170-361a37512830",
+        "text_length": 13,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-17T07:24:41.441585"
+    }
+  ],
   "semantic_index": {},
-  "last_updated": "2025-12-05T15:17:50.517174"
+  "last_updated": "2025-12-17T07:24:41.441654"
 }
