Add new conversation JSON files for Aurora-Main and Aurora-X projects
- Created conversation files for Aurora-Main with IDs:
  - conv_20251217_125442_f3c74c
  - conv_20251217_130717_f837f5
  - conv_20251217_133628_a53bdc
- Added user messages for analysis and diagnostics in Aurora-Main:
  - conv_2025_12_17_218: "analyze codebase"
  - conv_2025_12_17_219: "are they broken?"
  - conv_2025_12_17_220: "SELF DIAGNOSE"
- Created conversation files for Aurora-X with IDs:
  - conv_20251217_125444_9a2783
  - conv_20251217_130718_58c8b4
  - conv_20251217_133630_74afd1 with embedded user message "are they broken?"

--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -29,6 +29,21 @@
       "role": "user",
       "content": "self diagnose",
       "timestamp": "2025-12-17T07:24:41.438617"
+    },
+    {
+      "role": "user",
+      "content": "analyze codebase",
+      "timestamp": "2025-12-17T13:37:17.104966"
+    },
+    {
+      "role": "user",
+      "content": "are they broken?",
+      "timestamp": "2025-12-17T13:37:34.339212"
+    },
+    {
+      "role": "user",
+      "content": "SELF DIAGNOSE",
+      "timestamp": "2025-12-17T13:37:52.459947"
     }
   ],
   "mid_term": [],
@@ -83,6 +98,45 @@
         "type": "shortterm"
       },
       "stored_at": "2025-12-17T07:24:41.441048"
+    },
+    "memory_46aea133-d834-4eb7-9ee3-3ed1a6dfdeac": {
+      "value": {
+        "text": "analyze codebase",
+        "meta": {
+          "session_id": "chat-1765978619732",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-17T13:37:17.109194",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-17T13:37:17.109202"
+    },
+    "memory_bad6eb96-b88a-4c11-a730-77b8805b0811": {
+      "value": {
+        "text": "are they broken?",
+        "meta": {
+          "session_id": "chat-1765978619732",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-17T13:37:34.340744",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-17T13:37:34.340751"
+    },
+    "memory_d738ca42-84f3-498e-a028-b2914fc050d5": {
+      "value": {
+        "text": "SELF DIAGNOSE",
+        "meta": {
+          "session_id": "chat-1765978619732",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-17T13:37:52.461470",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-17T13:37:52.461476"
     }
   },
   "events": [
@@ -105,8 +159,38 @@
         "longterm": false
       },
       "timestamp": "2025-12-17T07:24:41.441585"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "46aea133-d834-4eb7-9ee3-3ed1a6dfdeac",
+        "text_length": 16,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-17T13:37:17.109941"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "bad6eb96-b88a-4c11-a730-77b8805b0811",
+        "text_length": 16,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-17T13:37:34.341158"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "d738ca42-84f3-498e-a028-b2914fc050d5",
+        "text_length": 13,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-17T13:37:52.461868"
     }
   ],
   "semantic_index": {},
-  "last_updated": "2025-12-17T07:24:41.441654"
+  "last_updated": "2025-12-17T13:37:52.461928"
 }
