--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "python-envs.defaultEnvManager": "ms-python.python:system",
     "python-envs.pythonProjects": [],
-    "python.defaultInterpreterPath": "${workspaceFolder}/.venv/Scripts/python.exe",
-    "python.pythonPath": "${workspaceFolder}/.venv/Scripts/python.exe",
+    "python.defaultInterpreterPath": "C:\\\\Python314\\\\python.exe",
+    "python.pythonPath": "C:\\\\Python314\\\\python.exe",
     "python.analysis.extraPaths": [
         "./tools"
     ],
