--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -4,6 +4,21 @@
       "role": "user",
       "content": "ping",
       "timestamp": "2025-12-17T07:54:18.477616"
+    },
+    {
+      "role": "user",
+      "content": " Self diagnose",
+      "timestamp": "2025-12-20T06:21:31.905943"
+    },
+    {
+      "role": "user",
+      "content": "Status",
+      "timestamp": "2025-12-20T06:21:43.881376"
+    },
+    {
+      "role": "user",
+      "content": "Give me a list of things that need work on",
+      "timestamp": "2025-12-20T06:22:08.549239"
     }
   ],
   "mid_term": [
@@ -118,6 +133,45 @@
         "type": "shortterm"
       },
       "stored_at": "2025-12-17T13:37:52.461476"
+    },
+    "memory_e747aff3-f320-4d0b-8e9b-a77d015e1901": {
+      "value": {
+        "text": " Self diagnose",
+        "meta": {
+          "session_id": "chat-1766211682850",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-20T06:21:31.918533",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-20T06:21:31.918545"
+    },
+    "memory_e76b831b-301a-4ff0-b10a-7b0bb2c27fae": {
+      "value": {
+        "text": "Status",
+        "meta": {
+          "session_id": "chat-1766211682850",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-20T06:21:43.882664",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-20T06:21:43.882673"
+    },
+    "memory_e0f59a2f-3c76-490a-abf1-7a2a698fe8a3": {
+      "value": {
+        "text": "Give me a list of things that need work on",
+        "meta": {
+          "session_id": "chat-1766211682850",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-20T06:22:08.550964",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-20T06:22:08.550973"
     }
   },
   "events": [
@@ -150,8 +204,38 @@
         "longterm": false
       },
       "timestamp": "2025-12-17T07:54:18.490235"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "e747aff3-f320-4d0b-8e9b-a77d015e1901",
+        "text_length": 14,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-20T06:21:31.919156"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "e76b831b-301a-4ff0-b10a-7b0bb2c27fae",
+        "text_length": 6,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-20T06:21:43.888353"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "e0f59a2f-3c76-490a-abf1-7a2a698fe8a3",
+        "text_length": 42,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-20T06:22:08.682783"
     }
   ],
   "semantic_index": {},
-  "last_updated": "2025-12-20T04:25:00.000000"
+  "last_updated": "2025-12-20T06:22:08.682897"
 }
