--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "flask-cors>=5.0.0",
     "httpx>=0.28.1",
     "pytest>=8.3.5",
+    "pytest-cov>=5.0.0",
     "requests>=2.32.4",
     "uvicorn[standard]>=0.33.0",
 ]
@@ -25,6 +26,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0",
+    "pytest-cov>=5.0.0",
     "black>=22.0",
     "mypy>=0.950",
 ]
