--- a/data/memory/projects/Aurora-Main/project_memory.json
+++ b/data/memory/projects/Aurora-Main/project_memory.json
@@ -24,6 +24,26 @@
       "role": "user",
       "content": "what issues do you have",
       "timestamp": "2025-12-24T03:58:11.792649"
+    },
+    {
+      "role": "user",
+      "content": "status",
+      "timestamp": "2025-12-24T21:48:30.899153"
+    },
+    {
+      "role": "user",
+      "content": "i need analysis of code enhancement",
+      "timestamp": "2025-12-24T21:48:58.271253"
+    },
+    {
+      "role": "user",
+      "content": "python",
+      "timestamp": "2025-12-24T21:49:09.028231"
+    },
+    {
+      "role": "user",
+      "content": "decryption program",
+      "timestamp": "2025-12-24T21:49:23.843163"
     }
   ],
   "mid_term": [
@@ -328,6 +348,58 @@
         "type": "shortterm"
       },
       "stored_at": "2025-12-24T03:58:11.797179"
+    },
+    "memory_629161f2-20dd-409d-8168-e4955b31b0f1": {
+      "value": {
+        "text": "status",
+        "meta": {
+          "session_id": "chat-1766630905890",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-24T21:48:30.926124",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-24T21:48:30.926141"
+    },
+    "memory_174e5160-fa4f-4899-8aae-9f22e7d67af6": {
+      "value": {
+        "text": "i need analysis of code enhancement",
+        "meta": {
+          "session_id": "chat-1766630905890",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-24T21:48:58.283244",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-24T21:48:58.283259"
+    },
+    "memory_30ee4f15-3acb-4257-b902-b43b7ab40359": {
+      "value": {
+        "text": "python",
+        "meta": {
+          "session_id": "chat-1766630905890",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-24T21:49:09.037231",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-24T21:49:09.037246"
+    },
+    "memory_86debaa0-b07f-4a94-ada1-111c021ec26a": {
+      "value": {
+        "text": "decryption program",
+        "meta": {
+          "session_id": "chat-1766630905890",
+          "client": "web",
+          "type": "user_message"
+        },
+        "timestamp": "2025-12-24T21:49:23.852816",
+        "type": "shortterm"
+      },
+      "stored_at": "2025-12-24T21:49:23.852831"
     }
   },
   "events": [
@@ -500,8 +572,48 @@
         "longterm": false
       },
       "timestamp": "2025-12-24T03:58:11.799723"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "629161f2-20dd-409d-8168-e4955b31b0f1",
+        "text_length": 6,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-24T21:48:30.932845"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "174e5160-fa4f-4899-8aae-9f22e7d67af6",
+        "text_length": 35,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-24T21:48:58.288026"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "30ee4f15-3acb-4257-b902-b43b7ab40359",
+        "text_length": 6,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-24T21:49:09.044767"
+    },
+    {
+      "type": "memory_write",
+      "details": {
+        "id": "86debaa0-b07f-4a94-ada1-111c021ec26a",
+        "text_length": 18,
+        "has_meta": true,
+        "longterm": false
+      },
+      "timestamp": "2025-12-24T21:49:23.859972"
     }
   ],
   "semantic_index": {},
-  "last_updated": "2025-12-24T03:58:11.800138"
+  "last_updated": "2025-12-24T21:49:23.861095"
 }
