Add runtime configuration validation and health checks
- Implemented runtime configuration validation in `runtime_config.py` to ensure required secrets are set and to check for optional dependencies.
- Added functions for data root resolution and readiness reporting.
- Created initial conversation JSON files for projects Aurora-Main and Aurora-X with sample messages.
- Added integration tests for health and readiness endpoints in `test_health.py` to verify API functionality.

--- a/data/memory/projects/Aurora-X/project_memory.json
+++ b/data/memory/projects/Aurora-X/project_memory.json
@@ -91,6 +91,11 @@
       "value": "Chris",
       "category": "identity",
       "timestamp": "2025-12-14T04:37:48.775241"
+    },
+    "test_fact_1766727175": {
+      "value": "Aurora-X Ultra test value",
+      "category": "test",
+      "timestamp": "2025-12-26T00:32:55.407787"
     }
   },
   "summary": ""
