Fix e2e workflow env secret and add client lockfile

--- a/.github/workflows/aurora-e2e.yml
+++ b/.github/workflows/aurora-e2e.yml
@@ -19,6 +19,7 @@ jobs:
     env:
       HOST: http://127.0.0.1:8000
       PORT: 8000
+      AURORA_TOKEN_SECRET: "ci-test-secret"
 
     steps:
       - name: Checkout Code
