Refactor App component structure and improve splash screen functionality

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,14 @@
             "runOptions": {
                 "runOn": "folderOpen"
             }
+        },
+        {
+            "label": "npm install",
+            "type": "shell",
+            "command": "npm install",
+            "presentation": {
+                "reveal": "silent"
+            }
         }
     ]
 }
