--- a/package.json
+++ b/package.json
@@ -119,12 +119,21 @@
     "autoprefixer": "^10.4.20",
     "cross-env": "^10.1.0",
     "drizzle-kit": "^0.31.8",
-    "esbuild": "^0.25.0",
+    "esbuild": "^0.27.2",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.5",
     "typescript": "5.6.3",
     "vite": "^7.3.0"
+  },
+  "overrides": {
+    "esbuild": "0.27.2",
+    "@esbuild-kit/core-utils": {
+      "esbuild": "0.27.2"
+    },
+    "@esbuild-kit/esm-loader": {
+      "esbuild": "0.27.2"
+    }
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
